boulder/boulder/tests/compile_fail/function/fn_arg_repeat.bo
# Identifier `a`
# more than once
# (5:

fn err(a: u32, b: u32, a: u16) -> u32 {
    b
}